--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@radix-ui/react-toast": "^1.2.6",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.16.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
@@ -33,6 +34,7 @@
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-phone-input-2": "^2.15.1",
