--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.16.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.476.0",
     "mongoose": "^8.13.1",
     "next": "^15.2.3",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.54.2",
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
